--- a/app/trainers/_styles/trainers.module.css
+++ b/app/trainers/_styles/trainers.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
-  max-width: 1440px;
-  margin: 0 auto;
+  /* max-width: 1440px; */
+  margin: 0;
   padding: 0 20px 20px 20px;
   display: flex;
   flex-direction: column;
@@ -12,9 +12,11 @@
 .bannerImageContainer {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 400px;
   margin-bottom: 10px;
   overflow: hidden;
+
+
 
 }
 
@@ -31,30 +33,24 @@
 }
 
 .title {
-  color: #000000;
+  color: #fffdfd;
   margin-bottom: 20px;
   font-size: 90px;
-  
   position: absolute;
   left: 30px;
   top: 80px;
   z-index: 1;
 }
-.titleGrey {
-  color: #faf0ca;
-}
+
 .p {
   color: #fff;
   font-size: 70px;
-
   position: absolute;
   left: 35px;
   top: 180px;
   z-index: 1;
 }
-.pHighlight {
-  color: #E76317;
-}
+
 
 .content {
   display: flex;
