--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #fff;
-    --foreground: #ededed;
+    --foreground: #000000;
   }
 }
 
@@ -14,6 +14,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  max-width: 1440px;
 }
 
 body {
@@ -22,12 +23,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  
 }
 
 a {
