--- a/app/_components/_styles/header.module.css
+++ b/app/_components/_styles/header.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: auto;
   padding: 13px 64px;
-  /* background: #013056; */
+  background: #013056;
   /* background-image: linear-gradient(
     to right,
     #013056,
@@ -18,7 +18,7 @@
     #41586a,
     #485b69
   ); */
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to right,
     #013056,
     #003560,
@@ -32,7 +32,7 @@
     #488dcd,
     #5aa2e2,
     #6bb7f6
-  );
+  ); */
   display: flex;
   justify-content: space-between;
   align-items: center;
