--- a/app/carts/_styles/carts.module.css
+++ b/app/carts/_styles/carts.module.css
@@ -14,6 +14,7 @@
     align-items: center;
     gap: 40px;
     width: 100%;
+    height: 500px;
     padding: 40px 105px;
     font-family:
       Noto Sans TC,
@@ -41,10 +42,7 @@
     gap: 10px;
     display: flex;
   }
-  .img {
-    width: 60px;
-    height: 60px;
-  }
+  
   .progressLine {
     background-color: #fff;
     width: 236px;
@@ -55,19 +53,17 @@
       width: 100px;
     }
   }
-  .img2 {
-    width: 70px;
-    height: 70px;
-  }
+  
   .sectionA {
     background-color: #0b3760;
-    width: 100%;
+    width: 50%;
     padding: 20px;
+    margin: auto;
   }
   .card {
     background-color: #0b3760;
-    border-radius: 8px;
-    max-width: 1046px;
+    /* border-radius: 8px; */
+    max-width: 1024px;
     margin: 0 auto;
     overflow: hidden;
   }
@@ -77,9 +73,10 @@
     background-color: #eb854a;
     justify-content: space-between;
     align-items: center;
+    height: 70px;
     padding: 32px;
     font-family: Inter, sans-serif;
-    font-size: 30px;
+    font-size: 24px;
     display: flex;
   }
   @media (width<=640px) {
@@ -92,10 +89,7 @@
   .span {
     font-weight: 600;
   }
-  .img3 {
-    width: 24px;
-    height: 24px;
-  }
+  
   .productTable {
     color: #fff;
     width: 100%;
@@ -107,7 +101,7 @@
     text-align: center;
     grid-template-columns: 2fr 2fr 1fr 1fr 1fr;
     padding: 20px;
-    font-size: 24px;
+    font-size: 20px;
     display: grid;
   }
   @media (width<=991px) {
@@ -154,12 +148,12 @@
   }
   .sectionB {
     background-color: #0b3760;
-    width: 100%;
+    width: 50%;
     padding: 20px;
+    margin: auto;
   }
   .formCard {
     background-color: #0b3760;
-    border-radius: 8px;
     max-width: 1046px;
     margin: 0 auto;
     overflow: hidden;
@@ -174,12 +168,16 @@
       margin: 10px;
     }
   }
+  /*橘底標題*/
   .formHeader {
     color: #fff;
+    height: 40px;
     background-color: #eb854a;
     border: 1px solid #828181;
     padding: 12px;
-    font-size: 30px;
+    font-size: 20px;
+    display: flex;
+    align-items: center;  /* 垂直置中 */
   }
   .formGroup {
     flex-direction: column;
@@ -192,7 +190,7 @@
     font-family:
       Noto Sans TC,
       sans-serif;
-    font-size: 28px;
+    font-size: 18px;
   }
   .formInput {
     background-color: #fff;
@@ -209,8 +207,9 @@
   .sectionC,
   .sectionD {
     background-color: #0b3760;
-    width: 100%;
+    width: 50%;
     padding: 20px;
+    margin: auto;
   }
   .invoiceSection {
     grid-template-columns: 1fr 1fr;
