--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,8 +39,18 @@ a {
   text-decoration: none;
 }
 
+
+.container {
+  width: 100%;
+  max-width: 1440px;
+  margin: auto ;
+  min-height: 100vh;
+  
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
 }
+
