--- a/app/gymFriend/_styles/gymfrenid.module.css
+++ b/app/gymFriend/_styles/gymfrenid.module.css
@@ -1,10 +1,10 @@
 
 /* Bannner */
 .banner {
-  background-image: url('/imgs/gymfriendBanner.jpg');
+  background-image: url('/imgs/gymfriendBanner2000.jpg');
   max-width: 1440px;
   width: 100%;
-  height: 400px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: end;
