--- a/app/articles/styles/articles.module.css
+++ b/app/articles/styles/articles.module.css
@@ -1,30 +1,87 @@
 /* Bannner */
 .banner {
-    background-image: url('/imgs/articleBanner.jpg');
-    max-width: 1440px;
-    width: 100%;
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    gap: 20px;
-    align-items: flex-start;
-    margin-top: 50px;
-    padding: 50px 60px;
-  }
-  .banner h3 {
-    color: white;
-    font-size: 3rem;
-  }
-  .banner p {
-    color: white;
-    font-size: 1.5rem;
-  }
-  .friendContainer {
-    height: 100%;
-    margin: auto;
-    /* margin-top: 20px; */
-    margin-bottom: 100px;
-    max-width: 1440px;
-    background-color: #d4cec8;;
-  }
+  background-image: url('/imgs/articleBanner.jpg');
+  max-width: 1440px;
+  width: 100%;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  gap: 20px;
+  align-items: flex-start;
+  margin-top: 50px;
+  padding: 50px 60px;
+}
+.banner h3 {
+  color: white;
+  font-size: 3rem;
+}
+.banner p {
+  color: white;
+  font-size: 1.5rem;
+}
+.friendContainer {
+  height: 100%;
+  margin: auto;
+  /* margin-top: 20px; */
+  margin-bottom: 100px;
+  max-width: 1440px;
+  background-color: #d4cec8;
+}
+.articlesssContainer {
+  width: 100%;
+  max-width: 1440px;
+  margin: auto;
+  min-height: 100vh;
+}
+/* card */
+.card{
+  background-color: #0b3760;
+  width: 250px;
+  height: 380px;
+  padding:5px 5px;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  color: white;
+  margin: 10px;
+  border-radius: 3px;
+  transition: all 0.3s;
+}
+.card:hover{
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s;
+}
+.images{
+  position: relative;
+}
+.faHeart{
+  cursor: pointer;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  font-size: 22px;
+  box-sizing: content-box;
+  transition: all 0.3s;
+}
+.faHeart:hover{
+  background-color:#d4cec8be ;
+  padding: 5px;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.content{
+  padding:5px 10px;
+  margin: 10px 0;
+}
+.content h5{
+  font-size: 22px;
+
+}
+.content hr{
+  margin: 10px 0;
+}
+.content  p{
+  font-size: 14px;
+}
