完成 行事曆元件 修改下拉式搜尋樣式

--- a/app/_components/_styles/footer.module.css
+++ b/app/_components/_styles/footer.module.css
@@ -5,7 +5,7 @@
   padding: 40px 64px 50px;
   /* background: linear-gradient(90deg, rgba(0, 0, 0, 0.73) 26%, rgba(0, 0, 0, 0) 100%); */
   background-image: linear-gradient(
-    to right,
+    to bottom,
     #013056,
     #003560,
     #003a69,
