--- a/app/classes/_components/_styles/coach-detail.module.css
+++ b/app/classes/_components/_styles/coach-detail.module.css
@@ -71,18 +71,7 @@
     gap: 25px;
     background-image: linear-gradient(
     to bottom,
-    #013056,
-    #003560,
-    #003a69,
-    #004073,
-    #00457d,
-    #0e4f8a,
-    #1a5a97,
-    #2465a5,
-    #3779b9,
-    #488dcd,
-    #5aa2e2,
-    #6bb7f6
+    #0b3760
   );
     border-radius: 3px;
     padding: 35px;
