--- a/app/classes/_styles/classes.module.css
+++ b/app/classes/_styles/classes.module.css
@@ -1,18 +1,23 @@
 .container {
   width: 100%;
   max-width: 1440px;
-  margin: 50px auto 20px auto;
+  margin: 0 auto 20px auto;
   padding: 0px;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
- 
 }
 .content {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
 }
+.content h2{
+  text-align: center;
+  font-size: 35px;
+  margin-bottom: 15px;
+}
+
 .secTitle {
   font-size: 35px;
   margin-bottom: 15px;
@@ -26,6 +31,7 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 20px;
+  height: 300px;
 }
 
 .coachIcon {
@@ -34,8 +40,6 @@
   margin-bottom: 15px;
   color: #666;
 }
-
-
 
 .resultsContainer {
   flex-grow: 1;
@@ -54,6 +58,9 @@
   color: #666;
   text-align: center;
 }
+.tabButtons {
+  display: flex;
+}
 
 @media (max-width: 768px) {
   /* .container {
@@ -66,7 +73,7 @@
   }
 }
 
-.coachesContainer{
+.coachesContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
