--- a/app/coaches/_styles/coaches.module.css
+++ b/app/coaches/_styles/coaches.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   max-width: 1440px;
-  margin: 50px auto 20px auto;
+  margin: 10px auto 20px auto;
   padding: 0px;
   display: flex;
   flex-direction: column;
@@ -26,6 +26,7 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 20px;
+  height: 250px;
 }
 
 .coachIcon {
