--- a/app/gymFriend/_styles/gymfrenid.module.css
+++ b/app/gymFriend/_styles/gymfrenid.module.css
@@ -1,8 +1,7 @@
-
 /* Bannner */
 .banner {
   background-image: url('/imgs/gymfriendBanner2000.jpg');
-  max-width: 1440px;
+  /* max-width: 1440px; */
   width: 100%;
   height: 500px;
   display: flex;
@@ -15,71 +14,96 @@
 }
 .banner h3 {
   color: white;
-  font-size: 3rem;
+  font-size: clamp(2rem, 3.5vw, 3rem);
 }
 .banner p {
   color: white;
-  font-size: 1.5rem;
+  font-size: clamp(1rem, 2vw, 1.5rem);
 }
 .friendContainer {
   height: 100%;
   margin: auto;
-  /* margin-top: 20px; */
   margin-bottom: 100px;
   max-width: 1440px;
-  background-color: #d4cec8;;
 }
 /* Select */
 .selectTarget {
-  margin: auto;
-  max-width: 800px;
-  /* margin-top: 20px; */
-  /* margin-bottom: 50px; */
+  margin: 20px auto;
+  max-width: 60%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   color: #333;
-  /* background-color: #fff6; */
-
   border-radius: 3px;
-  /* background-color: #0b3760b4; */
-  /* color: white; */
+  padding: 30px;
+  background-color: #f5f5f5;
 }
+
 .selectTarget p {
   padding: 10px 15px;
-  margin: 10px;
   border-radius: 3px;
 }
+
 .selectTarget p span {
   display: inline-block;
   padding: 0 5px;
 }
-.selectTarget ul {
-  /* background-color: #0b3760; */
-  /* color: white; */
-  margin: 0;
-  padding: 10px 15px;
-  list-style: none;
+
+.gender {
+  height: 30px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  /* box-shadow: 5px 3px 5px #33333388; */
+  margin-right: 16px;
+  color: #0b3760;
+  border-radius: 3px;
+  justify-content: space-around;
+  width: 20%;
+}
+
+.gender svg {
+  width: 100%;
+  cursor: pointer;
+  box-sizing: content-box;
+  height: 100%;
+  padding: 10px;
+  /* font-size: 24px; */
+  display: block;
+  border-bottom: 1px solid #0b3760;
+}
+
+.gender svg:hover {
+  background-color: #db6318;
+  color: #fff;
   border-radius: 3px;
 }
-.selectTarget ul li {
+
+/* Dropdown */
+.dropdown {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.dropdown label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.dropdown select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #0b3760;
+  border-radius: 3px;
+  background-color: #fff;
+  color: #333;
+  font-size: 16px;
   cursor: pointer;
-  padding: 0px 15px;
-  /* border-right: 1px solid white; */
-  border-right: 1px solid #333;
 }
-.selectTarget ul li:hover {
-  /* color: #f87808; */
-  text-decoration: underline;
-  text-underline-offset: 5px;
+
+.dropdown select:focus {
+  outline: none;
+  border-color: #db6318;
 }
-.selectTarget ul li:last-child {
-  border-right: none;
-}
+
 /* 麵包屑 */
 .breadcrumbContainer {
   max-width: 1200px;
@@ -93,7 +117,6 @@
   display: flex;
   justify-content: flex-start;
   width: 100%;
-  /* border-bottom: 1px solid #eee; */
   background-color: transparent;
 }
 
@@ -198,34 +221,35 @@
   cursor: not-allowed;
 }
 
+/* List */
 .personList {
-  background-color:  #fff6;
+  max-width: 1440px;
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  gap: 30px;
   padding: 10px;
   justify-content: flex-start;
+  margin: 0 auto;
 }
 
-/* CARD */
+/* Card */
 
 .profileCard {
   margin: auto;
   margin-top: 40px;
   margin-bottom: 20px;
   width: 228px;
-  height: 271px;
+  /* width: 100%; */
+  height: 320px;
   padding-top: 79px;
   flex-direction: column;
   justify-content: space-between;
 }
 
 .profileCard_container {
-  background-color: #0b3760ce;
-  /* background-color: #0b3760; */
+  background-color: #0b3760;
   display: flex;
-  height: 200px; /* 384px * 2/3 */
-  padding-bottom: 45px;
+  height: 220px;
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
@@ -235,8 +259,8 @@
 .profileImage {
   aspect-ratio: 0.98;
   object-fit: contain;
-  width: 150px; /* 248px * 2/3 */
-  border-radius: 50%; /* 126px * 2/3 */
+  width: 150px;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   margin-bottom: 10px;
@@ -258,14 +282,14 @@
 .profile_divider {
   border: 0;
   border-top: 1px solid #fff;
-  margin-top: 12px;
+  margin: 12px 0;
   width: 90%; /* 344px * 2/3 */
 }
 
 .profile_description_wrapper {
   display: flex;
   margin-top: 3px;
-  height: 49px; /* 73px * 2/3 */
+  height: 100px; /* 73px * 2/3 */
   justify-content: center;
   flex-direction: column;
   align-items: center;
@@ -273,13 +297,18 @@
 }
 
 .profile_description {
+  /* height: 100px; */
   padding: 0px 20px;
   font-size: 12px; /* 18px * 2/3 */
   color: #fff;
   line-height: 20px;
   flex: 1;
   margin: 0;
-  /* overflow: hidden; */
+  /* -webkit-line-clamp: 3; */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 10px;
 }
 
 .profile_arrow {
@@ -310,15 +339,17 @@
   align-items: center;
 }
 .favorite_button {
-  background: #eb7d3e;
+  background: #f87808;
   /* background: #e76317; */
   border: none;
   color: white;
   padding: 6px;
   width: 60%;
+  /* margin: 30px 0; */
   cursor: pointer;
   font-size: 12px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
+  margin-bottom: 20px;
   border-radius: 3px;
 }
 
@@ -359,4 +390,41 @@
   line-height: 30px;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+@media (max-width: 768px) {
+  .selectTarget {
+    max-width: 80%;
+    flex-direction: column;
+  }
+
+  .selectTarget .gender {
+    width: 100%;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+  }
+
+  .selectTarget ul {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .selectTarget ul li {
+    width: 100%;
+    padding: 10px;
+    border-right: none;
+    text-align: center;
+  }
+
+  .dropdown select {
+    padding: 12px;
+  }
+  .breadcrumbItem a {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  .dropdown select {
+    padding: 15px;
+  }
 }
