--- a/app/articles/article/article.module.css
+++ b/app/articles/article/article.module.css
@@ -175,6 +175,7 @@
   margin:auto;
   border-radius: 1px;
   margin-bottom: 100px;
+  
 }
 .sliderItem{
   display: flex;
@@ -194,7 +195,7 @@
 
 
 
-@media (max-width: 768px) {
+@media (max-width: 1100px) {
   .topSection {
     flex-direction: column;
     align-items: center;
@@ -204,13 +205,17 @@
   }
   .articleContent {
     max-width: 100%;
+    padding: 10px 60px;
   }
   .articleContent img{
-    height: 149px;
-    width: 200px;
+    height: 300px;
+    width: 400px;
   }
   .topSection{
     margin-bottom: 20px;
+  }
+  .hotRankingArea {
+    max-width: 50%;
   }
   .wrapper {
     top: 90px;
@@ -233,5 +238,11 @@
   .sliderContainer {
     margin-top: 20px;
     padding: 10px;
+  }
+}
+@media (max-width: 400px){
+  .articleContent img{
+    height: 149px;
+    width: 200px;
   }
 }
