--- a/app/classes/_components/_styles/sort.module.css
+++ b/app/classes/_components/_styles/sort.module.css
@@ -1,10 +1,11 @@
 .sortContainer {
     display: flex;
     width: 100%;
-    height: 50px;
     margin-top: 20px;
     align-items: center;
     justify-content: center;
+    padding: 15px 0px;
+    margin-bottom: 70px;
   }
 
   .sortForm {
