更新商品頁/新增商品明細頁/新增影片列表/新增租用須知

--- a/app/products/components/_styles/AddToCartButton.module.css
+++ b/app/products/components/_styles/AddToCartButton.module.css
@@ -1,13 +1,13 @@
 .button {
-    width: 168px;
+    /* width: 150px; */
     max-width: 100%;
     margin-top: 11px;
-    padding: 8px 43px;
+    padding: 8px 30px;
     overflow: hidden;
     border: none;
     cursor: pointer;
     font-family: inherit;
-    font-size: inherit;
+    font-size: 14px;
   }
   
   .buttonDark {
