--- a/app/products/components/_styles/ProductCard.module.css
+++ b/app/products/components/_styles/ProductCard.module.css
@@ -2,16 +2,18 @@
     flex-grow: 1;
     flex-shrink: 1;
     align-self: stretch;
-    width: 240px;
-    min-width: 240px;
+    width: 250px;
+    max-width: 250px;
+    height: 365px;
     /* margin: auto; */
-    padding: 10px;
+    /* padding: 10px; */
     overflow: hidden;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
   }
   
   .cardDark {
-    background-color: #0b3760;
-    color: #fff;
+    background-color: rgb(255, 255, 255);
+    color: #191313;
   }
   
   .cardLight {
@@ -25,8 +27,7 @@
     justify-content: start;
     align-items: end;
     width: 100%;
-    height: 250px;
-    padding: 5px 5px;
+    height: 200px;
     display: flex;
     position: relative;
     overflow: hidden;
@@ -42,9 +43,8 @@
   }
   
   .iconWrapper {
-    background-color: rgb(255, 255, 255, 0.5);
     border-radius: 50px;
-    width: 54px;
+    width: 40px;
     padding: 10px 7px;
     position: relative;
     z-index: 1;
@@ -56,6 +56,13 @@
     object-position: center;
     width: 100%;
   }
+
+  .btns{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
   
   .content {
     font-family:
@@ -64,7 +71,7 @@
       Roboto,
       Helvetica,
       sans-serif;
-    margin-top: 8px;
+      padding: 8px;
   }
   
   .header {
@@ -72,17 +79,21 @@
     align-items: start;
     gap: 40px 48px;
     width: 100%;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 600;
     display: flex;
   }
 
   .price{
-    font-size: 22px;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    color: rgb(31, 86, 112);
+    font-weight: 900;
   }
   
   .divider {
-    border: 1px solid currentColor;
+    border: 1px solid #697278;
     width: 380px;
     max-width: 100%;
     min-height: 1px;
@@ -90,13 +101,20 @@
   }
   
   .description {
-    color: #d9d9d9;
+    color: #697278;
     margin-top: 11px;
+    font-size: 14px;
   }
   
   .cardLight .description {
-    color: #6c7273;
-    margin-top: 14px;
+    color: #0f1819;
+    margin-top: 11px;
+  }
+
+  .heart{
+    font-size: 24px;
+    color: rgb(141, 138, 138);
+    cursor: pointer;
   }
   
   @media (width <= 991px) {
