--- a/app/products/components/_styles/sort.module.css
+++ b/app/products/components/_styles/sort.module.css
@@ -1,21 +1,42 @@
 
 .container {
   display: flex;
-  width: 100%;
-  border-bottom: 1px solid #eee;
+  flex-direction: column;
+  width: 25%;
+  min-height: 1500px;
+  /* min-width: 200px; */
+  /* background-color: rgb(231, 238, 241);; */
+  /* border-bottom: 1px solid #eee; */
   margin-bottom: 10px;
+  align-items: center;
+}
+
+.sortTitle{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  background-color: #dee5e7;
+  width: 100%;
+  padding: 10px;
+  font-weight: 700;
+  color: rgb(16, 19, 21);
+  /* border-bottom: #000 1px solid; */
 }
 
 .btnHome {
   padding: 0 20px;
+  width: 60%;
   height: 60px;
   text-align: center;
   line-height: 60px;
   color: #666;
-  font-size: 30px;
+  border-bottom: #cdc9c9 1px solid;
+  font-size: 20px;
   cursor: pointer;
   position: relative;
   transition: transform 0.3s ease;
+
 }
 
 .btnHome:hover {
@@ -35,6 +56,20 @@
   left: 0;
   width: 100%;
   height: 1px;
-  background: #000;
+  background: #48767b;
   transition: all 0.5s ease;
+  
+}
+
+@media (width <= 991px) {
+  .container {
+    /* width: 30%; */
+    margin-bottom: 10px;
+
+    
+  }
+  .btnHome{
+    width: 70%;
+    font-size: 12px;
+  }
 }
