--- a/app/articles/styles/articles.module.css
+++ b/app/articles/styles/articles.module.css
@@ -21,7 +21,7 @@
 }
 /* 麵包屑 */
 .breadcrumbContainer {
-  max-width: 1200px;
+  /* max-width: 1200px; */
   /* margin: 50px auto; */
   position: relative;
   font-family: 'Noto Serif TC', serif;
