--- a/app/classes/_components/_styles/calendar.module.css
+++ b/app/classes/_components/_styles/calendar.module.css
@@ -112,6 +112,7 @@
     font-weight: bold;
     border: #b63f08 2px solid;
     background-color: #db6318;
+    text-align: left;
   }
 
   .noEvent {
