--- a/app/classes/_components/_styles/classes-intro.module.css
+++ b/app/classes/_components/_styles/classes-intro.module.css
@@ -24,23 +24,25 @@
   
   .classes-info {
     flex: 4;
-    padding: 24px;
+    padding: 24px 24px 24px 0;
     display: flex;
     flex-direction: column;
   }
   
   .classes-title {
-    font-size: 24px;
+    font-size: 26px;
     font-weight: 600;
     margin-bottom: 16px;
     color: #ffffff;
+    padding: 60px 35px 10px 35px;
   }
   
   .description {
     font-size: 16px;
     line-height: 1.6;
-    color: #666666;
+    color: #c9c6c6;
     margin-bottom: 24px;
+    padding-left: 35px;
   }
   
   .cta-container {
@@ -55,7 +57,7 @@
     border-radius: 3px;
     font-size: 18px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: all 0.3s ease-in;
     position: absolute;
     bottom: 20px;
     right: 20px
@@ -63,4 +65,6 @@
   
   .classes-button:hover {
     background-color: #203e3e;
+    padding: 10px 20px;
+
   }
