--- a/app/classes/_components/_styles/classes-intro2.module.css
+++ b/app/classes/_components/_styles/classes-intro2.module.css
@@ -6,7 +6,7 @@
     position: relative;
     display: flex;
     width: 100%;
-    background: #0b3760;
+    background: #5e7388;
     overflow: hidden;
     height: 60vh;
     text-align: left;
@@ -15,7 +15,7 @@
   
   .classes-info {
     flex: 4;
-    padding: 24px;
+    padding: 24px 24px 24px 0;
     display: flex;
     flex-direction: column;
     order: 2;
@@ -34,17 +34,19 @@
   }
   
   .classes-title {
-    font-size: 24px;
+    font-size: 26px;
     font-weight: 600;
     margin-bottom: 16px;
-    color: #ffffff;
+    color: #000000;
+    padding: 60px 35px 10px 35px;
   }
   
   .description {
     font-size: 16px;
     line-height: 1.6;
-    color: #666666;
+    color: #1a1919;
     margin-bottom: 24px;
+    padding-left: 35px;
   }
   
   .cta-container {
@@ -59,7 +61,7 @@
     border-radius: 3px;
     font-size: 18px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: all 0.3s ease-in;
     position: absolute;
     bottom: 20px;
     left: 20px;
@@ -67,4 +69,5 @@
   
   .classes-button:hover {
     background-color: #203e3e;
+    padding: 10px 20px;
   }
