--- a/app/coaches/_components/_styles/banner.module.css
+++ b/app/coaches/_components/_styles/banner.module.css
@@ -35,20 +35,20 @@
   
   .title {
     color: white;
-    font-size: 90px;
+    font-size: clamp(3rem, 3.5vw, 4.5rem);
     font-weight: bold;
     margin-bottom: 20px;
     position: absolute;
-    left: 30px;
-    top: 80px;
+    left: 50px;
+    bottom: 80px;
     z-index: -1;
   }
   .p {
-    color: #fff;
-    font-size: 70px;
+    color: #dddddd;
+    font-size: clamp(1rem, 3.5vw, 2rem);
     position: absolute;
-    left: 35px;
-    top: 180px;    z-index: -1;
+    left: 50px;
+    bottom: 50px;    z-index: -1;
   }
   
  
