--- a/app/friends/_styles/gymfrenid.module.css
+++ b/app/friends/_styles/gymfrenid.module.css
@@ -53,7 +53,7 @@
   height: 30px;
   display: flex;
   margin-right: 16px;
-  color: #0b3760;
+  color: #333;
   border-radius: 3px;
   justify-content: space-around;
   width: 20%;
@@ -67,7 +67,7 @@
   padding: 10px;
   /* font-size: 24px; */
   display: block;
-  border-bottom: 1px solid #0b3760;
+  border-bottom: 1px solid #333;
 }
 
 .gender svg:hover {
