--- a/app/carts/_components/_styles/PickupStoreSection.module.css
+++ b/app/carts/_components/_styles/PickupStoreSection.module.css
@@ -1,15 +1,16 @@
 .sectionContainer {
     z-index: 0;
+    display: flex;
     flex-direction: column;
     justify-content: start;
     width: 100%;
     margin-top: 16px;
-    display: flex;
     position: relative;
   }
+    
   
   .sectionTitle {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
     margin: 0 0 8px 0;
   }
@@ -17,6 +18,7 @@
   .sectionContent {
     border: 1px solid #0000004d;
     width: 100%;
+    max-width: 363px;
     min-height: 45px;
     display: flex;
   }
@@ -36,8 +38,8 @@
     padding: 0;
   }
   
-  .chevronIcon::before {
+  /* .chevronIcon::before {
     content: "▼";
     font-size: 12px;
-  }
+  } */
   
