--- a/app/locations/_components/_styles/locations-card.module.css
+++ b/app/locations/_components/_styles/locations-card.module.css
@@ -1,4 +1,5 @@
-.container {
+
+.innerContainer {
     width: 250px;
     max-width: 250px;
     height: 400px;
@@ -9,6 +10,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-radius: 3px;
   }
   
   .imageWrapper {
@@ -36,30 +38,40 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 10px;
   }
   
   .titleContainer {
     width: 269px;
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
+    position: relative;
   }
-  
   .title {
     padding: 5px 0;
     text-align: center;
     color: white;
-    font-size: 35px;
+    font-size: 32px;
     font-weight: 700;
-    letter-spacing: 1.05px;
+    letter-spacing: 3px;
+  }
+
+  .titleContainer::after{
+    content: "";
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    bottom: -5px;
+    background: #ffffff;
+    display: block;
+    margin-top: 5px;
   }
   
   .infoContainer {
     padding: 8px 0;
-    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,8 +83,6 @@
     text-align: center;
     color: white;
     font-size: 18px;
-    font-family: Inter;
-    font-weight: 400;
     letter-spacing: 1.08px;
   }
   
@@ -89,17 +99,25 @@
   }
   
   .button {
+    border: none;
     width: 50%;
     height: 47px;
     background: #E76317;
     border-radius: 3px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  .button:hover{
+    background: #eee;;
+    color: rgb(23, 23, 23);
+  }
+  .button:first-child {
+    background: #eee;
+    color: rgb(23, 23, 23);
+  }
+
+  .button:hover:first-child {
+    background: #E76317;
+    color: white;
   }
   
-  .buttonText {
-    text-align: center;
-    color: white;
-    font-size: 16px;
-    font-weight: 400;
-    letter-spacing: 1.08px;
-
-  }
