--- a/app/carts/_components/_styles/OrderSummary.module.css
+++ b/app/carts/_components/_styles/OrderSummary.module.css
@@ -51,9 +51,10 @@
       Helvetica,
       sans-serif;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 1.4;
     margin: 0;
+    padding: 12px;
   }
   
   .summaryContent {
@@ -117,4 +118,6 @@
       width: 100%;
     }
   }
+
+  
   
