--- a/app/carts/_components/_styles/PaymentMethodSection.module.css
+++ b/app/carts/_components/_styles/PaymentMethodSection.module.css
@@ -1,42 +1,34 @@
 .sectionContainer {
-    z-index: 0;
+    /* z-index: 0; */
+    display: flex;
     flex-direction: column;
     justify-content: start;
     width: 100%;
-    display: flex;
+    max-width: 350px;
+    padding: 12px;
     position: relative;
   }
   
   .sectionTitle {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
     margin: 0 0 8px 0;
   }
-  
-  .sectionContent {
-    border: 1px solid #0000004d;
+
+  .dropdownContainer {
+    position: relative;
     width: 100%;
+  }
+
+  .paymentDropdown {
+    width: 100%;
+    padding: 8px;
+    font-size: 16px;
     min-height: 45px;
-    display: flex;
-  }
-  
-  .expandButton {
-    background: none;
-    border: none;
+    border: 1px solid #ccc;
+    /* border-radius: 3px; */
     cursor: pointer;
-    position: absolute;
-    top: 68px;
-    right: 0;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-  }
-  
-  .chevronIcon::before {
-    content: "▼";
-    font-size: 12px;
+    /* appearance: none; */
+    outline: none;
   }
   
