--- a/app/carts/_components/_styles/PickupStoreSection.module.css
+++ b/app/carts/_components/_styles/PickupStoreSection.module.css
@@ -1,10 +1,12 @@
 .sectionContainer {
-    z-index: 0;
+    /* z-index: 0; */
     display: flex;
     flex-direction: column;
     justify-content: start;
     width: 100%;
-    margin-top: 16px;
+    max-width: 350px;
+    padding: 12px;
+    /* margin-top: 16px; */
     position: relative;
   }
     
@@ -14,32 +16,36 @@
     font-weight: 400;
     margin: 0 0 8px 0;
   }
-  
-  .sectionContent {
-    border: 1px solid #0000004d;
-    width: 100%;
-    max-width: 363px;
-    min-height: 45px;
+
+  .dropdownContainer {
     display: flex;
+    align-items: center;
   }
+
+  .storeDropdown {
+    width: 100%;
+    padding: 8px;
+    font-size: 16px;
+    min-height: 45px;
+    border: 1px solid #ccc;
+    /* border-radius: 3px; */
+    cursor: pointer;
+    /* appearance: none; 移除預設樣式 */
+     outline: none;/*輪廓虛線框 */
+  }
+
+  /* .storeDropdown:focus {
+    outline: 2px solid #e67e22;
+    border-color: #e67e22;
+  } */
+  
   
   .expandButton {
     background: none;
     border: none;
     cursor: pointer;
-    position: absolute;
-    bottom: 2px;
-    right: 0;
-    width: 40px;
-    height: 40px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    padding: 0;
   }
   
-  /* .chevronIcon::before {
-    content: "▼";
-    font-size: 12px;
-  } */
   
