--- a/app/friends/_styles/friends.module.css
+++ b/app/friends/_styles/friends.module.css
@@ -1,7 +1,6 @@
 /* Bannner */
 .banner {
-  background-image: url('/imgs/gymfriendBanner2000.jpg');
-  /* max-width: 1440px; */
+  background-image: url('/imgs/friend/banner/friendBanner2000.jpg');
   width: 100%;
   height: 500px;
   display: flex;
@@ -9,7 +8,6 @@
   justify-content: end;
   gap: 20px;
   align-items: flex-start;
-  margin-top: 50px;
   padding: 50px 60px;
 }
 .banner h3 {
@@ -65,7 +63,6 @@
   box-sizing: content-box;
   height: 100%;
   padding: 10px;
-  /* font-size: 24px; */
   display: block;
   border-bottom: 1px solid #333;
 }
@@ -78,7 +75,7 @@
 
 /* Dropdown */
 .dropdown {
-  width: 100%;
+  width: 80%;
   margin-top: 20px;
 }
 
@@ -90,7 +87,8 @@
 
 .dropdown select {
   width: 100%;
-  padding: 10px;
+  height: 50px;
+  padding: 10px 20px;
   border: 1px solid #0b3760;
   border-radius: 3px;
   background-color: #fff;
@@ -101,7 +99,7 @@
 
 .dropdown select:focus {
   outline: none;
-  border-color: #db6318;
+  border: 2px solid #db6318;
 }
 
 /* 麵包屑 */
@@ -109,7 +107,6 @@
   max-width: 1200px;
   /* margin: 50px auto; */
   position: relative;
-  font-family: 'Noto Serif TC', serif;
   box-sizing: border-box;
 }
 
@@ -391,6 +388,11 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+@media (max-width: 1440) {
+  .banner {
+    background-image: url('/imgs/friend/banner/friendBanner1440.jpg');
+  }
+}
 @media (max-width: 768px) {
   .selectTarget {
     max-width: 80%;
@@ -426,5 +428,10 @@
 @media (max-width: 480px) {
   .dropdown select {
     padding: 15px;
+  }
+}
+@media (max-width: 420) {
+  .banner {
+    background-image: url('/imgs/friend/banner/friendBanner420.jpg');
   }
 }
